--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
 #root {
-  color: red;
+  color: rgb(16, 15, 15);
+  background-color: rgb(225, 217, 217);
+}
+ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  background: white;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
+
+li h3 {
+  margin: 10px 0;
+  font-size: 1.2em;
+  font-weight: bold;
+
+  text-align: center;
+}
+
+li img {
+  object-fit: cover;
+  border-radius: 5px;
 }
