--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(15, 15, 15);
-
+  min-height: 100vh;
   display: flex;
   justify-content: center;
 }
@@ -9,6 +9,7 @@ body {
   color: rgb(16, 15, 15);
   background-color: rgb(19, 19, 19);
   align-content: center;
+  max-width: 100%;
 }
 ul {
   display: grid;
