--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ li h3 {
   font-size: 1.2em;
   font-weight: bold;
   border: 1px solid black;
+  background-color: rgb(178, 177, 177);
   border-radius: 10px;
   padding: 20px;
 }
