--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ ul {
   list-style-type: none;
   padding: 10px;
   justify-content: center;
-  max-width: 95%;
+  max-width: 100%;
+  padding: 20px;
 }
 
 li {
