--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
 #root {
   background-color: rgb(232, 232, 232);
   align-content: center;
-
   width: 95%;
   margin: auto;
 }
@@ -17,7 +16,6 @@ ul {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 30px;
-  list-style-type: none;
   padding: 10px;
   justify-content: center;
   max-width: 100%;
@@ -30,19 +28,19 @@ li {
   border-radius: 8px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  height: 410px;
-  width: 310px;
   color: rgb(16, 15, 15);
 }
 
 li h3 {
-  margin: 10px 0;
-  font-size: 1.2em;
-  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 25px;
+  padding: 10px;
   border: 1px solid black;
-  background-color: rgb(178, 177, 177);
   border-radius: 10px;
-  padding: 20px;
+  background-color: lightgray;
 }
 
 li p {
