--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   align-content: center;
   width: 95%;
   margin: auto;
+  font-family: "Atkinson Hyperlegible", sans-serif;
 }
 ul {
   display: grid;
