--- a/style.css
+++ b/style.css
@@ -56,3 +56,13 @@ li img {
   max-width: 100%;
   height: auto;
 }
+
+#search{
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border-radius: 5px;
+  border: 4px solid #ccc;
+  font-size: 16px;
+}
