--- a/style.css
+++ b/style.css
@@ -66,3 +66,13 @@ li img {
   border: 4px solid #ccc;
   font-size: 16px;
 }
+
+#select{
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border-radius: 5px;
+  border: 4px solid #ccc;
+  font-size: 16px;
+}
