--- a/style.css
+++ b/style.css
@@ -58,7 +58,35 @@ li img {
 }
 
 #search{
-  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border-radius: 5px;
+  border: 4px solid #ccc;
+  font-size: 16px;
+}
+
+#select-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+#select-container label,
+#select-container input {
+  margin: 0;
+}
+
+#otherShowsSelect{
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border-radius: 5px;
+  border: 4px solid #ccc;
+  font-size: 16px;
+}
+
+#select{
   padding: 10px;
   margin-bottom: 20px;
   margin-top: 20px;
