--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ li img {
   height: auto;
 }
 
-#search{
+#search {
   padding: 10px;
   margin-bottom: 20px;
   margin-top: 20px;
@@ -65,7 +65,6 @@ li img {
   border: 4px solid #ccc;
   font-size: 16px;
 }
-
 
 #select-container {
   display: flex;
@@ -78,7 +77,7 @@ li img {
   margin: 0;
 }
 
-#otherShowsSelect{
+#otherShowsSelect {
   padding: 10px;
   margin-bottom: 20px;
   margin-top: 20px;
@@ -87,12 +86,40 @@ li img {
   font-size: 16px;
 }
 
-#select{
-
+#select {
   padding: 10px;
   margin-bottom: 20px;
   margin-top: 20px;
   border-radius: 5px;
   border: 4px solid #ccc;
   font-size: 16px;
+}
 
+.showName {
+  border-radius: 1px solid rgb(211, 211, 211);
+  border-radius: 10px;
+}
+
+.showListContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  padding: 20px;
+  max-width: 100%;
+}
+
+@media (max-width: 768px) {
+  .showListContainer {
+    grid-template-columns: 1fr;
+  }
+}
+
+.showCard {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  gap: 20px;
+  align-items: flex-start;
+}
