--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(15, 15, 15);
+  background-color: rgb(243, 41, 182);
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -7,7 +7,7 @@ body {
 }
 
 #root {
-  background-color: rgb(232, 232, 232);
+  background-color: rgb(12, 12, 12);
   align-content: center;
   width: 95%;
   margin: auto;
@@ -24,12 +24,12 @@ ul {
 }
 
 li {
-  background: white;
+  background: rgb(5, 5, 5);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  color: rgb(16, 15, 15);
+  color: rgb(231, 227, 227);
 }
 
 li h3 {
@@ -41,7 +41,7 @@ li h3 {
   padding: 10px;
   border: 1px solid black;
   border-radius: 10px;
-  background-color: lightgray;
+  background-color: rgb(5, 5, 5);
 }
 
 li p {
@@ -62,7 +62,7 @@ li img {
   margin-bottom: 20px;
   margin-top: 20px;
   border-radius: 5px;
-  border: 4px solid #ccc;
+  border: 4px solid rgb(5, 5, 5);
   font-size: 16px;
 }
 
@@ -82,7 +82,7 @@ li img {
   margin-bottom: 20px;
   margin-top: 20px;
   border-radius: 5px;
-  border: 4px solid #ccc;
+  border: 4px solid rgb(5, 5, 5);
   font-size: 16px;
 }
 
@@ -102,7 +102,7 @@ li img {
 
 .showListContainer {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(8, 1fr);
   gap: 30px;
   padding: 20px;
   max-width: 100%;
@@ -115,11 +115,58 @@ li img {
 }
 
 .showCard {
-  background-color: #fff;
+  background-color: rgb(5, 5, 5);
   border-radius: 10px;
   padding: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   gap: 20px;
   align-items: flex-start;
+  color: white;
+}
+
+.imageWrapper {
+  position: relative;
+  width: 100%;
+}
+
+.showImage {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.showDetails {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.85);
+  color: #fff;
+  padding: 10px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  overflow-y: auto;
+  font-size: 14px;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.showCard:hover .showDetails {
+  opacity: 1;
+}
+
+.showMoreBtn {
+  border: none;
+  background-color: white;
+  border-radius: 6px;
+  padding: 10px;
+  font-size: medium;
+}
+
+.showMoreBtn:hover {
+  background-color: rgb(243, 41, 182);
+  transform: scale(1.1);
 }
