--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ li img {
 
 .showListContainer {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   gap: 30px;
   padding: 20px;
   max-width: 100%;
@@ -152,6 +152,7 @@ li img {
   background-color: rgb(5, 5, 5);
   cursor: pointer;
   transition: border-color 0.3s ease;
+  color: white;
 }
 
 #genre:hover,
@@ -182,7 +183,7 @@ li img {
   font-size: 16px;
   border: 2px solid #ccc;
   border-radius: 8px;
-  background-color: rgb(228, 99, 157);
+  background-color: rgb(5, 5, 5);
   cursor: pointer;
   transition: border-color 0.3s ease;
   color: white;
@@ -202,6 +203,7 @@ li img {
   background-color: rgb(5, 5, 5);
   cursor: pointer;
   transition: border-color 0.3s ease;
+  color: white;
 }
 
 #otherShowsSelect:hover,
@@ -218,6 +220,7 @@ li img {
   background-color: rgb(5, 5, 5);
   cursor: pointer;
   transition: border-color 0.3s ease;
+  color: white;
 }
 
 #search:hover,
